--- a/pokemon_game.html
+++ b/pokemon_game.html
@@ -5,5 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Eksamen i Javascript og API</title>
   </head>
-  <body></body>
+  <body>
+    <h1>Pokemonoversikt</h1>
+  </body>
 </html>
