--- a/pokemon_game.html
+++ b/pokemon_game.html
@@ -7,5 +7,34 @@
   </head>
   <body>
     <h1>Pokemonoversikt</h1>
+    <div id="show-all-pokemon"></div>
+    //div som pokemon skal legges inn i
+
+    <script>
+      const showAllPokemon = document.querySelector("#show-all-pokemon"); //Her hentes div ifra HTML
+
+      async function fetchPokemon() {
+        const pokemonRequest = await fetch(
+          "https://pokeapi.co/api/v2/pokemon/"
+        ); //Fetcher APIet's pokemon (etter anvist i dokumentasjonen)
+
+        const result = await pokemonRequest.json(); //resultat fra API gjøres om til json-format
+
+        result.results.forEach(async (pokemon) => {
+          //ForEach går gjennom results-arrayet //Tar imot Pokemonobjekt til parameter
+          const pokemonRequest = await fetch(pokemon.url); //Fetcher alle pokemons
+          const pokemonData = await pokemonRequest.json(); //Gjør om til json-format, await=venter til data er lastet opp
+
+          const pokemonElement = document.createElement("div"); //lager ny div med informasjonen fra APIet
+          pokemonElement.innerHTML = `
+        <p>Navn: ${pokemonData.name}</p> 
+        <p>Type: ${pokemonData.types[0].type.name}</p>`; //pokemonData.name brukes for å få opp navnet, types for å få typen. Bruke array 0 for å få første typen, ikke alle.
+
+          showAllPokemon.appendChild(pokemonElement); //appendChild for å lage underelement av ShowAllPokemon, og funksjonen gjør at info vises på nettsiden.
+        });
+      }
+
+      fetchPokemon(); //kalle på funksjonen
+    </script>
   </body>
 </html>
