Gjort om kommentar i body

--- a/pokemon_game.html
+++ b/pokemon_game.html
@@ -8,7 +8,7 @@
   <body>
     <h1>Pokemonoversikt</h1>
     <div id="show-all-pokemon"></div>
-    //div som pokemon skal legges inn i
+    <!-- div som pokemon skal legges inn i -->
 
     <script>
       const showAllPokemon = document.querySelector("#show-all-pokemon"); //Her hentes div ifra HTML
