Lagt til knapper for lagre, slett og endre

--- a/pokemon_game.html
+++ b/pokemon_game.html
@@ -8,6 +8,12 @@
   <body>
     <h1>Pokemonoversikt</h1>
     <div id="show-all-pokemon"></div>
+    <!--Knapper som synes i hver div-->
+    <div class="buttons-container">
+      <input class="pokemon-btn" type="button" value="Lagre" id="save-btn" />
+      <input class="pokemon-btn" type="button" value="Slett" id="delete-btn" />
+      <input class="pokemon-btn" type="button" value="Endre" id="edit-btn" />
+    </div>
     <!-- div som pokemon skal legges inn i -->
 
     <script>
