endret const result til let result

--- a/pokemon_game.html
+++ b/pokemon_game.html
@@ -28,7 +28,7 @@
         );
 
         //resultat fra API gjøres om til json-format
-        const result = await pokemonRequest.json();
+        let result = await pokemonRequest.json();
 
         console.log(showAllPokemon);
 
