Lagt til tekst og størrelse på knapper

--- a/pokemon_game.html
+++ b/pokemon_game.html
@@ -54,8 +54,16 @@
 
           //legge til knapper
           const saveBtn = document.createElement("button");
+          saveBtn.textContent = "Lagre";
+          saveBtn.style.width = "50px";
+
           const deleteBtn = document.createElement("button");
+          deleteBtn.textContent = "Slett";
+          deleteBtn.style.width = "50px";
+
           const editBtn = document.createElement("button");
+          editBtn.textContent = "Endre";
+          editBtn.style.width = "50px";
 
           pokemonCard.appendChild(saveBtn);
           pokemonCard.appendChild(deleteBtn);
