ny branch for filter

--- a/pokemon_game.html
+++ b/pokemon_game.html
@@ -7,6 +7,7 @@
   </head>
   <body>
     <h1>Pokemonoversikt</h1>
+    <div id="filter-buttons"></div>
     <!-- div som pokemon skal legges inn i -->
     <div id="show-all-pokemon"></div>
 
