Lagt til clear filter-knapp

--- a/pokemon_game.html
+++ b/pokemon_game.html
@@ -7,7 +7,9 @@
   </head>
   <body>
     <h1>Pokemonoversikt</h1>
+    <button id="clear-filter">Fjern filter</button>
     <div id="filter-buttons"></div>
+
     <!-- div som pokemon skal legges inn i -->
     <div id="show-all-pokemon"></div>
 
